--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/stats/:path*",
-      "destination": "https://stats.rohanmenon.com/:path*"
-    },
-    {
-      "source": "/stats/:path*/",
-      "destination": "https://stats.rohanmenon.com/:path*/"
+      "source": "/umami.js",
+      "destination": "https://stats.rohanmenon.com/umami.js"
     }
   ]
 }
