--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://www.rohanmenon.com/'
 languageCode = 'en-us'
 title = 'Rohan Menon'
 theme = 'supersimple'
