Added cache control to media files

--- a/vercel.json
+++ b/vercel.json
@@ -45,5 +45,16 @@
       "destination": "/projects/:path*",
       "permanent": false
     }
+  ],
+  "headers": [
+    {
+      "source": "/media/*",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=604800, stale-while-revalidate=604800"
+        }
+      ]
+    }
   ]
 }
