--- a/vercel.json
+++ b/vercel.json
@@ -3,47 +3,57 @@
     {
       "source": "/log-book/",
       "destination": "/posts/",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/wp-content/uploads/2022/09/Low_power_workshop2022.pdf",
       "destination": "/media/workshop_paper.pdf",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/wp-content/uploads/2022/08/Resume-Rohan-Menon-Website.pdf",
       "destination": "/media/resume.pdf",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/log-book/web-portfolio/loading-images-in-a-grid/",
       "destination": "/projects/web-portfolio/loading-images-grid/",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/log-book/web-portfolio/loading-images-in-a-grid",
       "destination": "/projects/web-portfolio/loading-images-grid",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/log-book/temperate/algorithmically-choose-text-color/",
       "destination": "/projects/temperate/choosing-text-color/",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/log-book/temperate/algorithmically-choose-text-color",
       "destination": "/projects/temperate/choosing-text-color",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/log-book/:path*/",
       "destination": "/projects/:path*/",
-      "permanent": false
+      "permanent": true
     },
     {
       "source": "/log-book/:path*",
       "destination": "/projects/:path*",
-      "permanent": false
+      "permanent": true
+    },
+    {
+      "source": "/research/:path*",
+      "destination": "/projects/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/research/:path*/",
+      "destination": "/projects/:path*/",
+      "permanent": true
     }
   ],
   "headers": [
