--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ title = 'Rohan Menon'
 theme = 'supersimple'
 
 [params]
-  description = "I’m an incoming PhD student to MIT EECS. I have a BS in Electrical Engineering from the University of Washington. I love working on projects involving electronics, software and design."
+  description = "I’m a PhD student in [Signal Kinetics](https://www.media.mit.edu/groups/signal-kinetics/overview/) at the [MIT Media Lab](https://www.media.mit.edu/). I love working on projects involving electronics, software and design."
   images = ['media/cover.png']
   title = 'Rohan Menon'
 
